added unscaled and scaled MRC integration and tests